Fix stream serialisation